CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
PROJECT(ita)

OPTION(ENABLE_MEMWATCH "enable memwatch" on)
if(ENABLE_MEMWATCH)
SET(MW_SRCS memwatch.c)
ADD_DEFINITIONS(-DMEMWATCH -DMEMWATCH_STDIO)
endif()

ADD_DEFINITIONS(-Wall --std=gnu99)

SET(SRCS main.c common.c iptables.c iptables_ext.c packet.c)
ADD_EXECUTABLE(ita ${SRCS} ${MW_SRCS})
TARGET_LINK_LIBRARIES(ita)

INSTALL(TARGETS ita RUNTIME DESTINATION bin)
